--- a/K8s/helm/templates/mysql-deployment.yaml
+++ b/K8s/helm/templates/mysql-deployment.yaml
@@ -24,7 +24,22 @@ spec:
         # added for Istio
         securityContext:
           capabilities:
-            add: ["NET_ADMIN"]
+            add: 
+            - AUDIT_WRITE
+            - CHOWN
+            - DAC_OVERRIDE
+            - FOWNER
+            - FSETID
+            - KILL
+            - MKNOD
+            - NET_BIND_SERVICE
+            - NET_RAW
+            - SETFCAP
+            - SETGID
+            - SETPCAP
+            - SETUID
+            - SYS_CHROOT
+            - SYS_PTRACE
         ports:
         - containerPort: 3306
         resources:
